Fix de la couleur du background en dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@ h1 {
   display: block;
   border-radius: 5px;
   border: 1px solid var(--clr-markup);
+  background-color: var(--clr-secondary);
   resize: none;
   padding: 1rem;
 }
