--- a/scss/article.scss
+++ b/scss/article.scss
@@ -92,6 +92,7 @@
           display: block;
           border-radius: 5px;
           border: 1px solid var(--clr-markup);
+          background-color: var(--clr-secondary);
           resize: none;
           padding: 1rem;
         }
